fix bible css on small devices and print area

--- a/assets/styles/bible.css
+++ b/assets/styles/bible.css
@@ -47,9 +47,27 @@ h1 { margin-bottom: 0; }
 header { margin: 0 2em; }
 a { display: inline-block; }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   body                { background-color: var(--base3) !important; }
   td.el span:after    { display: none; }
   td.el, td.la, td.pl { width: 33%; }
   .footnote           { display: none; }
+  .link               { display: none; }
+}
+
+@media only screen and (max-width: 500px) {
+  td.el, td.pl { width: 50%; }
+  td.la        { display: none; }
+  .comment     { display: none; }
+  .description { display: none; }
+}
+
+@media only print {
+  body                { background-color: #fff !important; }
+  td.el, td.pl, td.la { width: 33%; }
+  td.el span:after    { display: none; }
+  .footnote           { display: none; }
+  .link               { display: none; }
+  .comment            { display: none; }
+  .description        { display: none; }
 }
